--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -9,6 +9,7 @@ jobs:
     name: Build
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
@@ -42,6 +43,9 @@ jobs:
             echo "$RUNNER_OS not supported"
             exit 1
           fi
+        env:
+          GITHUB_USERNAME: ${{ github.actor }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Distributable
         uses: actions/upload-artifact@v4
