--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-kotlin.version=2.0.20
-compose.version=1.7.0-beta01
+kotlin.version=2.1.20
+compose.version=1.8.1
